--- a/IESA_ROOT/blog/templates/blog/htmx/post_search_results.html
+++ b/IESA_ROOT/blog/templates/blog/htmx/post_search_results.html
@@ -12,7 +12,7 @@
             <div class="list-group">
                 {% for user in results.users %}
                     {% if user.username and user.username|length > 0 %}
-                        <a href="{% url 'profile_public_username' username=user.username %}" 
+                        <a href="{% url 'users:profile_public_username' username=user.username %}" 
                            class="list-group-item list-group-item-action d-flex align-items-center py-2 hx-item animation-delay-{{ forloop.counter0|default:0 }}">
                             {% if user.avatar %}
                                 <img src="{{ user.avatar.url }}" 
@@ -47,7 +47,7 @@
             <div class="list-group">
                 {% for post in results.posts %}
                 {% if post.pk %}
-                <a href="{% url 'post_detail' pk=post.pk %}" class="list-group-item list-group-item-action hx-item animation-delay-{{ forloop.counter0|default:0 }}">
+                <a href="{% url 'blog:post_detail' pk=post.pk %}" class="list-group-item list-group-item-action hx-item animation-delay-{{ forloop.counter0|default:0 }}">
                     <div class="d-flex w-100 justify-content-between align-items-start">
                         <div class="flex-grow-1">
                             <h6 class="mb-1 fw-bold">📝 {{ post.title }}</h6>
@@ -87,7 +87,7 @@
             <div class="list-group">
                 {% for event in results.events %}
                 {% if event.pk %}
-                <a href="{% url 'event_detail' pk=event.pk %}" class="list-group-item list-group-item-action hx-item animation-delay-{{ forloop.counter0|default:0 }}">
+                <a href="{% url 'blog:event_detail' pk=event.pk %}" class="list-group-item list-group-item-action hx-item animation-delay-{{ forloop.counter0|default:0 }}">
                     <div class="d-flex w-100 justify-content-between align-items-start">
                         <div class="flex-grow-1">
                             <h6 class="mb-1 fw-bold">📅 {{ event.title }}</h6>
