--- a/IESA_ROOT/gallery/templates/gallery/gallery.html
+++ b/IESA_ROOT/gallery/templates/gallery/gallery.html
@@ -112,7 +112,7 @@
         <div class="empty-emoji">📸</div>
         <h5>No photos yet</h5>
         <p class="text-muted mb-3">Добавьте фото мероприятий или проектов, чтобы вдохновить участников.</p>
-        <a href="{% url 'post_list' %}" class="btn btn-outline-primary btn-modern">Go to community</a>
+        <a href="{% url 'blog:post_list' %}" class="btn btn-outline-primary btn-modern">Go to community</a>
     </div>
 {% endif %}
 {% endblock %}
