--- a/IESA_ROOT/users/templates/users/activity_levels_info.html
+++ b/IESA_ROOT/users/templates/users/activity_levels_info.html
@@ -141,7 +141,7 @@
         <p class="mb-4 text-lg">
             Check your current activity level and start accumulating points today!
         </p>
-        <a href="{% url 'profile' %}" class="btn btn-light btn-lg fw-bold">
+        <a href="{% url 'users:profile' %}" class="btn btn-light btn-lg fw-bold">
             <i class="fas fa-user me-2"></i>View Your Profile
         </a>
     </div>
@@ -151,7 +151,7 @@
         <p class="mb-4 text-lg">
             Create an account and start your journey to becoming a legend.
         </p>
-        <a href="{% url 'register' %}" class="btn btn-light btn-lg fw-bold">
+        <a href="{% url 'users:register' %}" class="btn btn-light btn-lg fw-bold">
             <i class="fas fa-user-plus me-2"></i>Sign Up Now
         </a>
     </div>
