--- a/IESA_ROOT/users/templates/users/login.html
+++ b/IESA_ROOT/users/templates/users/login.html
@@ -88,7 +88,7 @@
             
             <p class="text-center text-muted mb-0">
                 Don't have an account? 
-                <a href="{% url 'register' %}" class="fw-bold text-decoration-none">Register here</a>
+                <a href="{% url 'users:register' %}" class="fw-bold text-decoration-none">Register here</a>
             </p>
                 </div>
             </div>
