--- a/IESA_ROOT/users/templates/users/register.html
+++ b/IESA_ROOT/users/templates/users/register.html
@@ -110,7 +110,7 @@
             
             <p class="text-center text-muted mb-0">
                 Already have an account? 
-                <a href="{% url 'login' %}" class="fw-bold text-decoration-none">Sign in here</a>
+                <a href="{% url 'users:login' %}" class="fw-bold text-decoration-none">Sign in here</a>
             </p>
                 </div>
             </div>
