--- a/IESA_ROOT/blog/templates/blog/htmx/posts_list_fragment.html
+++ b/IESA_ROOT/blog/templates/blog/htmx/posts_list_fragment.html
@@ -16,7 +16,7 @@
                     </div>
                 </div>
                 <div class="card-footer bg-white border-0 pt-0">
-                     <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-sm btn-primary btn-modern">Read more</a>
+                     <a href="{% url 'blog:post_detail' pk=post.pk %}" class="btn btn-sm btn-primary btn-modern">Read more</a>
                      <small class="text-muted float-end mt-2">Author: {{ post.author.username }}</small>
                 </div>
             </div>
