--- a/IESA_ROOT/blog/templates/blog/htmx/subscribe_button.html
+++ b/IESA_ROOT/blog/templates/blog/htmx/subscribe_button.html
@@ -1,6 +1,6 @@
 <!-- Subscribe Button Component (HTMX-powered) -->
 {% if request.user.is_authenticated and request.user != author %}
-<form hx-post="{% url 'toggle_subscription' author_pk=author.pk %}" hx-swap="outerHTML" class="engage-chip">
+<form hx-post="{% url 'blog:toggle_subscription' author_pk=author.pk %}" hx-swap="outerHTML" class="engage-chip">
     {% csrf_token %}
     <button type="submit" class="btn engage-btn {% if is_subscribed %}engage-btn--active{% endif %}" title="Subscribe to {{ author.username }}'s blog">
         <span class="engage-icon"><i class="fas fa-bell{% if is_subscribed %} fa-solid{% else %} fa-regular{% endif %}"></i></span>
