--- a/IESA_ROOT/users/templates/users/profile_edit.html
+++ b/IESA_ROOT/users/templates/users/profile_edit.html
@@ -92,7 +92,7 @@
 
                         <div class="edit-actions">
                             <button type="submit" class="btn btn-primary btn-modern">Save changes</button>
-                            <a href="{% url 'profile' %}" class="btn btn-outline-secondary btn-modern">Cancel</a>
+                            <a href="{% url 'users:profile' %}" class="btn btn-outline-secondary btn-modern">Cancel</a>
                         </div>
                     </form>
                 </div>
