✨ Fix event registration modal: remove stopPropagation, add proper attrs

--- a/IESA_ROOT/blog/templates/blog/event_detail.html
+++ b/IESA_ROOT/blog/templates/blog/event_detail.html
@@ -70,7 +70,7 @@
 </div>
 
 <!-- Registration Modal -->
-<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
+<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true" data-bs-backdrop="true" data-bs-keyboard="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-bottom-0">
@@ -85,7 +85,7 @@
                 <div class="row g-3">
                     <!-- SMS Contact -->
                     <div class="col-12 text-center">
-                        <a href="tel:+41795718887" class="btn btn-outline-primary p-3 min-w-280" onclick="event.stopPropagation();">
+                        <a href="tel:+41795718887" class="btn btn-outline-primary p-3 min-w-280" target="_blank">
                             <i class="fas fa-mobile-alt me-2"></i>
                             Call/SMS: +41 79 571 8887
                         </a>
@@ -93,7 +93,7 @@
                     
                     <!-- Telegram Contact -->
                     <div class="col-12 text-center">
-                        <a href="https://t.me/+41795718887" target="_blank" class="btn btn-info p-3 min-w-280 text-white" onclick="event.stopPropagation();">
+                        <a href="https://t.me/+41795718887" target="_blank" rel="noopener noreferrer" class="btn btn-info p-3 min-w-280 text-white">
                             <i class="fab fa-telegram me-2"></i>
                             Message on Telegram
                         </a>
