--- a/IESA_ROOT/users/templates/users/profile.html
+++ b/IESA_ROOT/users/templates/users/profile.html
@@ -156,7 +156,7 @@
                                                     </span>
                                                 {% endif %}
                                             </div>
-                                            <a href="{% url 'activity_levels_info' %}" class="btn btn-ghost btn-sm" title="Learn about activity levels">
+                                            <a href="{% url 'users:activity_levels_info' %}" class="btn btn-ghost btn-sm" title="Learn about activity levels">
                                                 <i class="fas fa-question-circle"></i>
                                             </a>
                                         </div>
